Fixed the header alignment

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -123,7 +123,7 @@ header {
 			#eee,
 			#ccc
 		);
-	padding: 10px 20px;
+	padding: 10px 5px;
 	color: #333;
 	font-size: 14px;
 	border-radius: 5px;
